fixed z-index bug on dropdown and added to cart notification always displaying

--- a/frontend/src/app/styles/index.css
+++ b/frontend/src/app/styles/index.css
@@ -132,6 +132,7 @@
         background: #fff;
         padding: 20px 0;
         top: 100%;
+        z-index: 99;
     }
     .nav-dropdown li {
         padding: 20px 30px;
